Fix-enroll-combobox: Fix enroll combobox

--- a/app/client/component/dialog_box/dialog_box.import.less
+++ b/app/client/component/dialog_box/dialog_box.import.less
@@ -9,6 +9,10 @@
    .form-group{
   	  input, select {
         .form-control;
+       
+       &[multiple]{
+         height: auto;
+       }
      }
      
      input[readonly].picker__input{
