--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -2,16 +2,10 @@
 @import "component/list_panel/list_panel.import.less";
 @import "component/dialog_box/dialog_box.import.less";
 @import "template/navigation/navigation.import.less";
-@import "template/carousel/carousel.import.less";
 @import "template/grade_table/grade_table.import.less";
 
 
-.FixedHeader_Cloned {
-    background-color: white;
-}
-
-
-.main {
+.content {
     .container;
     
     margin-top: 60px;
@@ -25,12 +19,3 @@
     .make-sm-column(6);
 }
 
-.breadcrumb{
-  li{
-    cursor: pointer;
-  }
-  
-  li.active{
-    cursor: default
-  }
-}
