--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -6,7 +6,7 @@
   
   <div class="navbar navbar-inverse" style="margin-bottom: 0px" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">BluePrint</a>
+        <a class="navbar-brand" href="/">BluePrint</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -15,9 +15,12 @@
         </button>
     </div>
     <div class="navbar-collapse collapse">
-        <!--ul class="nav navbar-nav">
-            <li class="active"><a href="#">Example Link</a></li>
-        </ul-->
+        <ul class="nav navbar-nav"><li><a href="/#about">About</a></li></ul>
+        <ul class="nav navbar-nav"><li><a href="/#features">Features</a></li></ul>
+        <ul class="nav navbar-nav"><li><a href="/#questions">Questions</a></li></ul>
+        {{#if currentUser}}
+          <ul class="nav navbar-nav"><li><a href="home">Home</a></li></ul>
+        {{/if}}
         <ul class="nav navbar-nav navbar-right">
             {{> loginButtons }}
         </ul>
