--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -4,7 +4,7 @@
   <div class="navbar-wrapper">
   <div class="container">
   
-  <div class="navbar navbar-inverse" style="margin-bottom: 0px" role="navigation">
+  <div class="navbar navbar-default navbar-inverse navbar-fixed-top" style="margin-bottom: 0px" role="navigation">
     <div class="navbar-header">
         <a class="navbar-brand" href="/">BluePrint</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
@@ -15,7 +15,6 @@
         </button>
     </div>
     <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav"><li><a href="/#about">About</a></li></ul>
         <ul class="nav navbar-nav"><li><a href="/#features">Features</a></li></ul>
         <ul class="nav navbar-nav"><li><a href="/#questions">Questions</a></li></ul>
         {{#if currentUser}}
