--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -24,6 +24,10 @@
    background-image: url("/images/road.jpg");
 }
 
+#about{
+   background-image: url("/images/coffee.jpg");
+}
+
 .banner {
   width: 100%;
   height: 100vh;
@@ -61,12 +65,36 @@
      p{
        font-size:16pt;
      }
+     button{
+       .form-control;
+       .btn-primary;
+       width:150px;
+       display: inline-block;
+     }
   }
 }
 
 .about {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	min-height: 300px;
-	background-color: white
+	background-color: white;
+   text-align: center;
+   padding: 50px;
+  
+   .feature{
+     .make-sm-column(3);
+     text-align: center;
+     margin-top: 50px;
+     margin-bottom: 50px;
+     
+     i{
+       border: 4px solid gray;
+       border-radius: 50%;
+       width: 100px;
+       height: 100px;
+       font-size: 55px;
+       padding-top: 15px;
+     }
+   }
 }
