--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -6,7 +6,7 @@
   
   <div class="navbar navbar-default navbar-inverse navbar-fixed-top" style="margin-bottom: 0px" role="navigation">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/">BluePrint</a>
+        <a class="navbar-brand" href="/#splash">BluePrint</a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
