faq fix grade table /navbar issue

--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -16,7 +16,8 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav"><li><a href="/#features">Features</a></li></ul>
-        <ul class="nav navbar-nav"><li><a href="/#questions">Questions</a></li></ul>
+        <ul class="nav navbar-nav"><li><a href="/#about">Get Started</a></li></ul>
+        <ul class="nav navbar-nav"><li><a href="/#faq">Questions</a></li></ul>
         {{#if currentUser}}
           <ul class="nav navbar-nav"><li><a href="home">Home</a></li></ul>
         {{/if}}
