--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -97,4 +97,11 @@
        padding-top: 15px;
      }
    }
+  
+   .question{
+     .make-sm-column(6);
+     margin-top: 50px;
+     margin-bottom: 50px;
+     text-align: left;
+   }
 }
