Fix navigation tab hilighting

--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -15,11 +15,11 @@
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/#features">Features</a></li>
-          <li><a href="/#about">Get Started</a></li>
-          <li><a href="/#faq">Questions</a></li>
+          <li id="featuresTab"><a href="/#features">Features</a></li>
+          <li id="aboutTab"><a href="/#about">Get Started</a></li>
+          <li id="faqTab"><a href="/#faq">Questions</a></li>
         {{#if currentUser}}
-          <li><a href="home">Home</a></li>
+          <li id="homeTab"><a href="home">Home</a></li>
         {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
