Fix grade header and navbar zindex issue

--- a/app/client/template/grade_table/grade_table.html
+++ b/app/client/template/grade_table/grade_table.html
@@ -1,7 +1,7 @@
 
 <template name="grade_table">
   <div id="gradebook-container">
-    <div id="scheduleWeekSelectContainer" style="position:fixed; top:0; left:0; width: 100%; z-index: 1056"></div>
+    <div id="scheduleWeekSelectContainer" style="position:fixed; top:50px; left:0; width: 100%; z-index: 1056"></div>
     <input id="scheduleWeekSelect" style="display:none"/>
     {{> htable data_function=data config=options }}
   </div>
