Update navigation to match main page

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -415,7 +415,7 @@ End
     .make-sm-column(6);
 }
 
-
+/* 
 #splash .static{
    background-image: url("/images/road.jpg");
 }
@@ -423,6 +423,7 @@ End
 #about{
    background-image: url("/images/coffee.jpg");
 }
+*/
 
 .banner {
   width: 100%;
