--- a/app/client/template/navigation/navigation.html
+++ b/app/client/template/navigation/navigation.html
@@ -17,7 +17,7 @@
           <ul class="nav navbar-nav">
             <li id="featuresTab"><a href="/#features">Features</a></li>
             <li id="aboutTab"><a href="/#about">Get Started</a></li>
-            <li id="faqTab"><a href="/#faq">Questions</a></li>
+            <li id="videoTab"><a href="/#video">Video</a></li>
           {{#if currentUser}}
             <li id="homeTab"><a href="home">Home</a></li>
           {{/if}}
