Remove secondary non-stick navigation from hero graphic

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -240,14 +240,9 @@ header {
   background: rgba(123,162,158, 0.6);
 }
 
-.navigation-header {
-  padding-top: 47px;
-  padding-bottom: 30px;
-}
-
 .intro-section {
-  margin-top: 70px;
-  margin-bottom: 100px;
+  margin-top: 180px;
+  margin-bottom: 120px;
 }
 
 .intro {
@@ -268,11 +263,9 @@ header {
     margin-bottom: 25px;
 }
 
-.pull-down a{
-  position: absolute;
+.scroll-down a{
   font-size: 28px;
   color: @primary-color;
-  bottom: 55px;
   left: 0;
   right: 0;
   margin-top: 0;
@@ -303,7 +296,7 @@ Brief Info/Feature
   width: 32px;
   height: 32px;
   border-radius: 3px;
-  background: @secondary-color;
+  background: @primary-color;
   color: #ffffff;
   line-height: 32px;
   margin-right: 15px;
@@ -318,7 +311,7 @@ Brief Info/Feature
   }
 }
 
-.side-infogrpah {
+.side-infograph {
   max-width: 532px;
 }
 
