Correct iframe video scaling

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -376,6 +376,12 @@ video {
   padding-right: 5px;
 }
 
+iframe,
+embed,
+object {
+  max-width: 100%;
+}
+
 /* -------------------------
 Footer
 --------------------------*/
