Minor copy edit. Combine two features sections and Update images

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -217,7 +217,7 @@ Header/Splash
 --------------------------*/
 
 header {
-  background: url("http://placehold.it/1920x1080") no-repeat center top fixed;
+  background: url("../images/relax.jpg") no-repeat center top fixed;
   -webkit-background-size: cover;
   background-size: cover;
   width:100%;
@@ -331,28 +331,28 @@ Features
 Get Started
 --------------------------*/
 .get-started-section {
-  background: url("http://placehold.it/1920x1080") no-repeat center fixed;
+  background: url("../images/parallax-clean-desk.jpg") no-repeat center fixed;
   -webkit-background-size: cover;
   background-size: cover;
 }
 
-.get-started h4 {
-  color: @text-color;
+.get-started-section h4 {
+  color: @alt-text-color;
 }
 
-.get-started h2 {
-  color: @text-color;
+.get-started-section h2 {
+  color: @alt-text-color;
   font-weight: 700;
   margin-top: 15px;
   margin-bottom: 40px;
 }
 
-.get-started h3 {
-  color: @text-color;
+.get-started-section h3 {
+  color: @alt-text-color;
 }
 .get-started-section .color-overlay {
-  padding-top: 125px;
-  padding-bottom: 125px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 /* -------------------------
