--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -7,7 +7,7 @@
 /* -------------------------
 Imports
 --------------------------*/
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,400italic|Raleway:500,600,700");
+@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,400italic");
 
 /* -------------------------
 Mixins
@@ -110,7 +110,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #323232;
   margin-bottom: 0;
   margin-top: 0;
@@ -237,6 +237,12 @@ header {
   color: #ffffff;
 }
 
+.intro {
+  font-size: 3.813rem;
+  line-height: 3.9rem;
+  font-weight: 200;
+}
+
 .intro-section .heading {
     font-size: 20px;
     padding-right: 10%;
@@ -336,13 +342,14 @@ Get Started
   background-size: cover;
 }
 
-.get-started-section h4 {
+.get-started-section h1 {
   color: @alt-text-color;
+  font-weight: 400;
 }
 
 .get-started-section h2 {
   color: @alt-text-color;
-  font-weight: 700;
+  font-weight: 200;
   margin-top: 15px;
   margin-bottom: 40px;
 }
