Development-Standards: Development Standards

--- a/app/client/component/dialog_box/dialog_box.import.less
+++ b/app/client/component/dialog_box/dialog_box.import.less
@@ -18,10 +18,14 @@
      input[readonly].picker__input{
        cursor: default
      }
+     
+     .picker__header{
+       select{
+         width: 40%;
+         display: inline;
+       }
+     }
    }
   
-   .picker__select--year, .picker__select--month{
-     padding: 0
-   }
 }
 
