--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -1,543 +1,14 @@
 @import "lib/bootstrap/style/bootstrap.import.less";
+@import "global.import.less";
+
+@import "page/main.import.less";
+@import "page/home.import.less";
+@import "page/gradebook.import.less";
+
 @import "component/list_panel/list_panel.import.less";
 @import "component/dialog_box/dialog_box.import.less";
-@import "template/navigation/navigation.import.less";
-@import "template/grade_table/grade_table.import.less";
 
-/* -------------------------
-Imports
---------------------------*/
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,400italic");
+@import "module/footer/footer.import.less";
+@import "module/navigation/navigation.import.less";
+@import "module/grade_table/grade_table.import.less";
 
-/* -------------------------
-Mixins
---------------------------*/
-
-
-/* -------------------------
-Variables
---------------------------*/
-@primary-color  :   #7BA29E;
-@secondary-color:   #B39A6A;
-@text-color     :   #4C4C4B;
-@alt-text-color :   #FFFFFF;
-@bg-color       :   #B5BAB4;
-@bg-color-2     :   #FFFFFF;
-
-/* -------------------------
-Styles
---------------------------*/
-
-html {
-  font-size: 100%;
-}
-
-body {
-  background: @bg-color;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 16px;
-  color: @text-color;
-  line-height: 25px;
-  text-align: center;
-}
-
-a {
-  color: @primary-color;
-  text-decoration: none;
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-  &:hover {
-    color: lighten(@primary-color, 5%);
-    text-decoration: underline;
-  }
-  &:active {
-    color: darken(@primary-color, 5%);
-  }
-  &:focus {
-    outline: inherit;
-    color: inherit;
-  }
-}
-
-.no-decor a {
-  color: #CCC;
-  text-decoration: none;
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-  &:hover {
-    color: lighten(#CCC, 5%);
-  }
-  &:active {
-    color: darken(#CCC, 5%);
-  }
-  &:focus {
-    outline: inherit;
-    color: inherit;
-  }
-}
-
-strong {
-  font-weight: 700;
-}
-.strong {
-  font-weight: 700;
-}
-
-.colored-line {
-  background: @primary-color;
-  height: 1px;
-  width: 70px;
-  margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.colored-text {
-  color: @primary-color !important;
-}
-
-.section {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-/* -------------------------
-Typography
---------------------------*/
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #323232;
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-h1 {
-  font-size: 2.813rem;
-  line-height: 3.75rem;
-  font-weight: 500;
-}
-
-h2 {
-  font-size: 2.188rem;
-  line-height: 3.125rem;
-  font-weight: 500;
-}
-
-h3 {
-  font-size: 1.5rem;
-  line-height: 2.375rem;
-  font-weight: 600;
-}
-
-h4 {
-  font-size: 1.25rem;
-  line-height: 2rem;
-  font-weight: 600;
-}
-
-h5 {
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 700;
-}
-
-h6 {
-  font-size: 16px;
-  line-height: 25px;
-  font-weight: 700;
-}
-
-/* -------------------------
-Buttons
---------------------------*/
-.btn:focus,
-.btn:active,
-.btn,
-.open .dropdown-toggle.btn {
-  outline: inherit;
-  border-color: inherit;
-}
-
-.standard-button {
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
-  border-radius: 3px;
-  padding: 15px 30px;
-  border: 0;
-  margin: 5px;
-  line-height: inherit;
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-}
-
-.standard-button {
-  background: @primary-color;
-  color: #ffffff;
-  text-decoration: none;
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-  &:hover {
-    background: lighten(@primary-color, 5%);
-    color: #ffffff;
-  }
-}
-
-.secondary-button-white {
-  font-family: 'Raleway', sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  text-transform: uppercase;
-  border-radius: 3px;
-  padding: 14px 30px;
-  border: 0;
-  margin: 5px;
-  border: 1px solid #727272;
-  color: #ffffff;
-  background: transparent;
-  line-height: inherit;
-  border: 1px solid rgba(255,255,255,0.5);
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-}
-
-.secondary-button-white:hover {
-    border: 1px solid rgba(255,255,255,1);
-    color: #ffffff;
-}
-
-/* -------------------------
-Header/Splash
---------------------------*/
-
-header {
-  background: url("../images/relax.jpg") no-repeat center top fixed;
-  -webkit-background-size: cover;
-  background-size: cover;
-  width:100%;
-  height:100%;
-}
-
-.color-overlay {
-  background: rgba(123,162,158, 0.6);
-}
-
-.intro-section {
-  margin-top: 180px;
-  margin-bottom: 120px;
-}
-
-.intro {
-  color: #ffffff;
-}
-
-.intro {
-  font-size: 3.813rem;
-  line-height: 3.9rem;
-  font-weight: 200;
-}
-
-.intro-section .heading {
-    font-size: 20px;
-    padding-right: 10%;
-    padding-left: 10%;
-    color: #ffffff;
-    margin-top: 40px;
-    line-height: 30px;
-}
-
-.button-container {
-    margin-top: 75px;
-    margin-bottom: 25px;
-}
-
-.scroll-down a{
-  font-size: 28px;
-  color: @primary-color;
-  left: 0;
-  right: 0;
-  margin-top: 0;
-  &:hover{
-    color: lighten(@primary-color, 5%);
-  }
-}
-
-
-/* -------------------------
-Brief Info/Feature
---------------------------*/
-.bgcolor-2 {
-  background: @bg-color-2;
-}
-
-.info-list {
-  margin-top: 25px;
-}
-
-.info-list li {
-  overflow: auto;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  list-style: none;
-  display: inline;
-}
-
-.info-list li .icon-container {
-  width: 32px;
-  height: 32px;
-  border-radius: 3px;
-  background: @primary-color;
-  color: #ffffff;
-  line-height: 32px;
-  margin-right: 15px;
-  margin-top: 5px;
-  text-align: center;
-}
-
-.info-list li .details {
-  width: 89%;
-  &:p {
-  margin-top: 5px;
-  }
-}
-
-.side-infograph {
-  max-width: 100%;
-}
-
-/* -------------------------
-Features
---------------------------*/
-.features {
-  margin-top: 35px;
-}
-
-.feature {
-  margin-top: 30px;
-  margin-bottom: 25px;
-}
-
-.feature .icon {
-  font-size: 50px;
-  margin-bottom: 30px;
-  color: @secondary-color;
-}
-
-.feature h4 {
-  margin-bottom: 10px;
-}
-
-/* -------------------------
-Get Started
---------------------------*/
-.get-started-section {
-  background: url("../images/parallax-clean-desk.jpg") no-repeat center fixed;
-  -webkit-background-size: cover;
-  background-size: cover;
-}
-
-.get-started-section h1 {
-  color: @alt-text-color;
-  font-weight: 400;
-}
-
-.get-started-section h2 {
-  color: @alt-text-color;
-  font-weight: 200;
-  margin-top: 15px;
-  margin-bottom: 40px;
-}
-
-.get-started-section h3 {
-  color: @alt-text-color;
-}
-.get-started-section .color-overlay {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-/* -------------------------
-How-to Video
---------------------------*/
-video {
-  max-width: 100%;
-  height: auto;
-}
-
-.video-container {
-  width: 100%;
-  margin-top: 75px;
-}
-
-.video-features {
-  margin-top: 40px;
-}
-
-.video-features .inline-icon {
-  padding-right: 5px;
-}
-
-iframe,
-embed,
-object {
-  max-width: 100%;
-}
-
-/* -------------------------
-Footer
---------------------------*/
-footer {
-  background-color : @primary-color;
-  padding-top: 40px;
-  padding-bottom: 15px;
-}
-
-footer ul {
-  margin-bottom: 40px;
-}
-footer li {
-  padding: 0 8px 0 8px;
-  list-style: none;
-  display: inline;
-}
-
-footer a {
-  color: #FFF;
-  text-decoration: none;
-  -webkit-transition: all ease 0.25s;
-  transition: all ease 0.25s;
-  &:hover {
-    color: lighten(#CCC, 5%);
-    text-decoration: none;
-  }
-  &:active {
-    color: darken(#CCC, 5%);
-    text-decoration: none;
-  }
-  &:focus {
-    outline: inherit;
-    color: inherit;
-  }
-}
-
-.footer-logo {
-  max-width: 180px;
-  margin: auto;
-}
-
-.copyright {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  color: #FFF;
-}
-/* -------------------------
-End
---------------------------*/
-
-.content {
-    .container;
-    
-    margin-top: 60px;
-    
-    @media (min-width: 768px) {
-        margin-top: 80px;
-    }
-}
-
-.info {
-    .make-sm-column(6);
-}
-
-/* 
-#splash .static{
-   background-image: url("/images/road.jpg");
-}
-
-#about{
-   background-image: url("/images/coffee.jpg");
-}
-*/
-
-.banner {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background-size: cover;
-  
-  .static{
-     background-size: cover;
-     width:100%;
-     height:100%;
-     position:fixed;
-  }
-  
-  &:after {
-     position: absolute;
-     top: 0;
-     left: 0;
-     right: 0;
-     bottom: 0;
-     background-color: rgba(0, 0, 0, 0.55);
-     content: "";
-  }
-  
-  .caption {
-     position: absolute;
-     top: 40%;
-     width: 100%;
-     z-index: 2;
-     color: white;
-     text-align: center;
-    
-     h1{
-       font-size:36pt;
-     }
-     p{
-       font-size:16pt;
-     }
-     button{
-       .form-control;
-       .btn-primary;
-       width:150px;
-       display: inline-block;
-     }
-  }
-}
-
-.about {
-	position: relative;
-	width: 100%;
-	min-height: 300px;
-	background-color: white;
-   text-align: center;
-   padding: 50px;
-  
-   .feature{
-     .make-sm-column(3);
-     text-align: center;
-     margin-top: 50px;
-     margin-bottom: 50px;
-     
-     i{
-       border: 4px solid gray;
-       border-radius: 50%;
-       width: 100px;
-       height: 100px;
-       font-size: 55px;
-       padding-top: 15px;
-     }
-   }
-  
-   .question{
-     .make-sm-column(6);
-     margin-top: 50px;
-     margin-bottom: 50px;
-     text-align: left;
-   }
-}
