Update footer links and style

--- a/app/client/module/footer/footer.import.less
+++ b/app/client/module/footer/footer.import.less
@@ -7,14 +7,15 @@ footer {
     .container;
     text-align: center;
   }
-  
-  ul {
-    margin-bottom: 40px;
+    
+ .footer-links {
+    text-align: center;
+    margin-bottom: 20px;
   }
-  li {
+
+  .footer-links .link {
     padding: 0 8px 0 8px;
-    list-style: none;
-    display: inline;
+    font-size: 14px;
   }
 
   a {
