Add faqs, privacy and terms templates

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -2,6 +2,9 @@
 @import "global.import.less";
 
 @import "page/main.import.less";
+@import "page/faqs.import.less";
+@import "page/terms.import.less";
+@import "page/privacy.import.less";
 @import "page/home.import.less";
 @import "page/gradebook.import.less";
 
