--- a/app/client/module/footer/footer.import.less
+++ b/app/client/module/footer/footer.import.less
@@ -39,6 +39,12 @@ footer {
   .footer-logo {
     max-width: 180px;
     margin: auto;
+    
+    img{
+      width: 150px;
+      background-color: white;
+      padding: 5px;
+    }
   }
 
   .copyright {
