--- a/app/client/module/navigation/navigation.import.less
+++ b/app/client/module/navigation/navigation.import.less
@@ -33,11 +33,21 @@ button.btn-Google{
         }
         
         .navbar {
-            padding-right: 0;
-            padding-left: 0;
+            padding-right: 5px;
+            padding-left: 5px;
         }
     }
-}
-.navbar-inverse .navbar-nav > li > a:focus{
-  color: #777777;
+  
+    .navbar-inverse .navbar-nav > li > a:focus{
+      color: #777777;
+    }
+
+    .navbar-brand{
+        width: 250px;
+        background-image: url('/images/bpt-horz-color.svg');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-right: 5px;
+    }
 }
