--- a/app/client/global.import.less
+++ b/app/client/global.import.less
@@ -1,7 +1,7 @@
 /* -------------------------
 Imports
 --------------------------*/
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,600,700,400italic");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,600,700,400italic");
 
 /* -------------------------
 Mixins
