--- a/app/client/module/footer/footer.import.less
+++ b/app/client/module/footer/footer.import.less
@@ -43,7 +43,7 @@ footer {
     
     img{
       width: 150px;
-      background-color: white;
+      //background-color: white;
       padding: 5px;
     }
   }
