Fix nav tab text color hilighting to #FFF

--- a/app/client/module/navigation/navigation.import.less
+++ b/app/client/module/navigation/navigation.import.less
@@ -39,7 +39,7 @@ button.btn-Google{
     }
   
     .navbar-inverse .navbar-nav > li > a:focus{
-      color: #777777;
+      color: #FFF;
     }
 
     .navbar-brand{
