Grade  table style for small screens

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -10,6 +10,7 @@
 
 @import "component/list_panel/list_panel.import.less";
 @import "component/dialog_box/dialog_box.import.less";
+@import "component/htable/htable.import.less";
 
 @import "module/footer/footer.import.less";
 @import "module/navigation/navigation.import.less";
