--- a/app/client/module/grade_table/grade_table.import.less
+++ b/app/client/module/grade_table/grade_table.import.less
@@ -1,4 +1,11 @@
 #gradebook-container{
   position: absolute;
   z-index: 1000;
+  
+  .group-header{
+    background-color: lightgray;
+    font-weight: bold;
+    height: 32px;
+    vertical-align: middle;
+  }
 }
