grade table style

--- a/app/client/module/grade_table/grade_table.import.less
+++ b/app/client/module/grade_table/grade_table.import.less
@@ -8,4 +8,13 @@
     height: 32px;
     vertical-align: middle;
   }
+  
+  .handsontable th:first-child{
+    overflow: visible;
+    border-right: none;
+    
+    input{
+      width: 120px;
+    }
+  }
 }
