Student add course

--- a/app/client/module/grade_table/grade_table.import.less
+++ b/app/client/module/grade_table/grade_table.import.less
@@ -7,6 +7,14 @@
     font-weight: bold;
     height: 32px;
     vertical-align: middle;
+    
+    .groupIcon{
+      .glyphicon;
+      .glyphicon-plus;
+      float: right;
+      font-size: x-small;
+      margin-top: 4px;
+    }
   }
   
   .handsontable th:first-child{
