Add twitter link. Add facebook and twitter icons.

--- a/app/client/module/footer/footer.import.less
+++ b/app/client/module/footer/footer.import.less
@@ -53,4 +53,17 @@ footer {
     margin-bottom: 15px;
     color: #FFF;
   }
+
+  .fa {
+    font-size: 16px;
+  }
+
+  .fa-facebook {
+      color: #3C599F;
+  }
+
+  .fa-twitter {
+      color: #32CCFE;
+  }
+
 }
