Update features Update faq Support for anallytics Change signup button color

--- a/app/client/page/main.import.less
+++ b/app/client/page/main.import.less
@@ -6,6 +6,10 @@
     padding-top: 50px;
     padding-bottom: 50px;
   }
+  
+  #sign_up{
+    background: #b39a6a;
+  }
 
 
   /* -------------------------
