--- a/app/client/module/grade_table/grade_table.import.less
+++ b/app/client/module/grade_table/grade_table.import.less
@@ -43,12 +43,13 @@
       // fix size
       table{
         table-layout: auto;
-        width: 1400px;
+        width: 800pt;
       }
       
       td{
-        width: 200px;
+        width: 200pt;
         font-size: 10pt;
+        height: 10pt;
       }
       
       // hide ovrerlays
