--- a/app/client/component/list_panel/list_panel.import.less
+++ b/app/client/component/list_panel/list_panel.import.less
@@ -5,6 +5,7 @@
     display: inline-block;
     margin-right: 10px;
     padding-top: 3px;
+  	 cursor: pointer;
     
     &:hover{
         color: white;
