--- a/app/client/module/grade_table/grade_table.import.less
+++ b/app/client/module/grade_table/grade_table.import.less
@@ -18,6 +18,7 @@
       float: right;
       font-size: x-small;
       margin-top: 4px;
+      cursor: pointer;
     }
   }
   
@@ -27,6 +28,7 @@
     
     input{
       width: 120px;
+      cursor: pointer;
     }
   }
   
