master: about page

--- a/app/client/layout.less
+++ b/app/client/layout.less
@@ -3,6 +3,7 @@
 
 @import "page/main.import.less";
 @import "page/faqs.import.less";
+@import "page/about.import.less";
 @import "page/terms.import.less";
 @import "page/privacy.import.less";
 @import "page/home.import.less";
