Update front page marketing text

--- a/app/client/page/main.import.less
+++ b/app/client/page/main.import.less
@@ -25,12 +25,16 @@
   }
 
   .color-overlay {
-    background: rgba(123,162,158, 0.6);
+    background: rgba(123,162,158, 0.8);
   }
 
   .intro-section {
     margin-top: 180px;
     margin-bottom: 120px;
+    
+    h1, h2, h3{
+      color: white;
+    }
   }
 
   .intro {
